- Реализовано перемещение на SD карту

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,4 +18,9 @@
 
     <string name="request_permission">This sample needs camera permission.</string>
     <string name="camera_error">This device doesn\\\'t support Camera2 API.</string>
+
+    <string name="file_move_progress">%d/%d files moved</string>
+    <string name="files_moved">All files successfully moved to SD CARD</string>
+
+
 </resources>
