--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -18,4 +18,7 @@
 
     <string name="request_permission">Это приложение требует разрешения камеры.</string>
     <string name="camera_error">This device doesn\\\'t support Camera2 API.</string>
+
+    <string name="file_move_progress">%d/%d files moved</string>
+    <string name="files_moved">Все файлы успешно перенесены на SD карту</string>
 </resources>
