--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -21,6 +21,7 @@
 
     <string name="file_move_progress">%d/%d files moved</string>
     <string name="files_moved">All files successfully moved to SD CARD</string>
+    <string name="files_not_enough_space">Not enough space on SD CARD, %dMB required but only %dMB is available.</string>
 
 
 </resources>
