--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -21,4 +21,5 @@
 
     <string name="file_move_progress">%d/%d files moved</string>
     <string name="files_moved">Все файлы успешно перенесены на SD карту</string>
+    <string name="files_not_enough_space">Not enough space on SD CARD, %dMB required but only %dMB is available.</string>
 </resources>
