Изменения: - Сделал интерфейс реагируемым на вытаскивание SD карты (чтоб иконка менялась во время того когда ее высунули и наоборот) - Изменил логику работу переноса файлов на SD карту, вместо переноса сделал копирование. - Добавил иконку приложения для продакшена - Попытка увеличить размер видео/фото

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -20,7 +20,7 @@
     <string name="camera_error">This device doesn\\\'t support Camera2 API.</string>
 
     <string name="file_move_progress">%d/%d files moved</string>
-    <string name="files_moved">All files successfully moved to SD CARD</string>
+    <string name="files_moved">All files successfully copied to SD CARD.</string>
     <string name="files_not_enough_space">Not enough space on SD CARD, %dMB required but only %dMB is available.</string>
 
 
